fix(plugin): disable acessibility integration on Wayland

It causes hangs, and thus doesn't actually help with accessibility but makes
it worse. Until that's fixed, it needs to stay disabled

BUG: 450940